--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,4 +1,3 @@
-
 .navbar {
   //position: absolute;
   width: 100%;
@@ -8,7 +7,7 @@
   border: 0;
   border-radius: 0;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.15);
-  transition: top 0s ease-in-out, left .2s ease-out, right .2s ease-out;
+  transition: top 0s ease-in-out, left 0.2s ease-out, right 0.2s ease-out;
 
   .logo-wrapper {
     display: inline-block;
@@ -38,7 +37,6 @@
       visibility: visible;
     }
   }
-
 }
 
 //
@@ -72,7 +70,6 @@
     &:hover > a {
       color: $color-brand;
     }
-
   }
 
   a {
@@ -83,7 +80,7 @@
     padding: 0 12px;
     line-height: 60px;
     color: $color-text;
-    transition: color .2s linear;
+    transition: color 0.2s linear;
 
     &:hover,
     &:focus,
@@ -109,7 +106,7 @@
     opacity: 0;
     visibility: hidden;
     box-shadow: 0px 1px 2px 0px rgba(50, 50, 50, 0.15);
-    transition: opacity .4s ease-in-out, top .2s ease-in-out;
+    transition: opacity 0.4s ease-in-out, top 0.2s ease-in-out;
 
     &::before {
       content: '';
@@ -117,7 +114,7 @@
       top: -4px;
       left: 30px;
       width: 0;
-      height: 0; 
+      height: 0;
       border-left: 4px solid transparent;
       border-right: 4px solid transparent;
       border-bottom: 4px solid #fff;
@@ -147,9 +144,7 @@
       border-top: none;
     }
   }
-
 }
-
 
 //
 // User account
@@ -180,9 +175,7 @@
       color: #fff;
       padding-left: 10px;
     }
-
   }
-
 
   .dropdown-menu {
     padding: 8px;
@@ -195,7 +188,7 @@
     margin-top: 0;
     border-radius: 0;
     box-shadow: 0px 1px 2px 0px rgba(50, 50, 50, 0.15);
-    transition: opacity .4s ease-in-out, top .2s ease-in-out;
+    transition: opacity 0.4s ease-in-out, top 0.2s ease-in-out;
 
     &::before {
       content: '';
@@ -203,7 +196,7 @@
       top: -4px;
       right: 31px;
       width: 0;
-      height: 0; 
+      height: 0;
       border-left: 4px solid transparent;
       border-right: 4px solid transparent;
       border-bottom: 4px solid #fff;
@@ -220,7 +213,7 @@
       padding: 3px 8px;
       border-bottom: 1px solid #f8f9fa;
       color: $color-text;
-      transition: color .2s linear;
+      transition: color 0.2s linear;
 
       &:hover,
       &.active {
@@ -233,7 +226,6 @@
       border-bottom: 0;
     }
   }
-
 }
 
 .user-login {
@@ -241,10 +233,11 @@
   font-size: 13px;
   color: #eee;
 
-  a {
+  a,
+  button {
     color: #fff;
-    opacity: .6;
-    transition: opacity .3s ease-in-out;
+    opacity: 0.6;
+    transition: opacity 0.3s ease-in-out;
     &:hover {
       color: #fff;
       opacity: 1;
@@ -259,7 +252,6 @@
       color: #fff;
     }
   }
-
 }
 
 //
@@ -275,8 +267,8 @@
   .nav-menu a {
     color: #fff;
     font-weight: 500;
-    opacity: .6;
-    transition: opacity .3s ease-in-out;
+    opacity: 0.6;
+    transition: opacity 0.3s ease-in-out;
 
     &:hover,
     &:focus,
@@ -326,8 +318,7 @@
   margin-top: 0;
   background-color: #fff;
   box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.1);
-  transition: top .3s ease-in-out, left .2s ease-out, right .2s ease-out;
-  
+  transition: top 0.3s ease-in-out, left 0.2s ease-out, right 0.2s ease-out;
 
   .navbar-toggle,
   .nav-menu a {
@@ -381,13 +372,11 @@
   right: 0;
   bottom: 0;
   z-index: 98;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
-
 
 // Media queries
 @include media-down(tablet) {
-  
   // off-canvas for sidenav
   html,
   body {
@@ -413,7 +402,7 @@
     background-color: #fff;
     margin-left: 0;
     padding: 24px 16px;
-    transition: left .5s;
+    transition: left 0.5s;
 
     a {
       line-height: 50px !important;
@@ -452,12 +441,11 @@
         line-height: 40px !important;
       }
     }
-
   }
 
   // Show offcanvas
   .offcanvas-show {
-/*
+    /*
     > main,
     .site-footer {
       left: 80%;
@@ -491,14 +479,14 @@
 
   .navbar {
     //box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
-    transition: .5s;
+    transition: 0.5s;
 
     .nav-menu {
       text-align: left;
 
       > li > a {
         font-weight: 600 !important;
-      } 
+      }
 
       ul {
         box-shadow: none;
@@ -513,12 +501,9 @@
   .nav-on-header .navbar {
     margin-top: 0;
   }
-
 }
 
-
 @include media-down(phone) {
-
   .navbar .logo img,
   .navbar .logo-alt img {
     height: 40px;
@@ -532,23 +517,17 @@
     padding-right: 12px;
     font-size: 11px;
   }
-
 }
 
-
 @include media-down(smallphone) {
-
   .navbar {
-
     .container,
     .container-fluid {
       padding-left: 5px;
     }
-    
   }
 
   .user-account {
     margin: 0;
   }
-
 }
